--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@tsmean/utils": "^1.1.3",
     "@types/body-parser": "^1.16.4",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.36",
