--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
+  "name": "mailchimp-tsmean",
+  "main": "dist/server.js",
+  "version": "1.0.0",
+  "engines": {
+    "node": "8.5.0"
+  },
+  "scripts": {
+    "start": "./node_modules/.bin/tsc && node dist/server.js"
+  },
   "dependencies": {
     "@tsmean/utils": "^1.1.3",
+    "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
+    "express": "^4.15.3",
+    "multer": "^1.3.0",
+    "request": "^2.81.0",
+    "typescript": "^2.6.2"
+  },
+  "devDependencies": {
     "@types/body-parser": "^1.16.4",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.36",
     "@types/multer": "^1.3.2",
     "@types/node": "^8.0.9",
-    "@types/request": "^0.0.45",
-    "body-parser": "^1.17.2",
-    "cors": "^2.8.3",
-    "express": "^4.15.3",
-    "multer": "^1.3.0",
-    "request": "^2.81.0"
-  }
+    "@types/request": "^0.0.45"
+  },
+  "author": "Daniel Niederberger",
+  "licence":"MIT"
 }
