--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 config.json
 node_modules
 dist
+npm-debug.log
 .idea
+
+# Local development
+*.env
+*.dev
+.DS_Store
+
+# Docker
+Dockerfile
+docker-compose.yml
