--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "express": "^4.15.3",
     "multer": "^1.3.0",
     "request": "^2.81.0",
-    "typescript": "^2.6.2"
-  },
-  "devDependencies": {
+    "typescript": "^2.6.2",
     "@types/body-parser": "^1.16.4",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.36",
@@ -26,5 +24,5 @@
     "@types/request": "^0.0.45"
   },
   "author": "Daniel Niederberger",
-  "licence":"MIT"
+  "licence": "MIT"
 }
