--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "mailchimp-tsmean",
-  "main": "dist/server.js",
+  "main": "src/server.js",
   "version": "1.0.0",
   "engines": {
     "node": "8.5.0"
   },
   "scripts": {
-    "start": "./node_modules/.bin/tsc && node dist/server.js"
+    "build": "tsc",
+    "start": "node src/server.js"
   },
   "dependencies": {
-    "@tsmean/utils": "^1.1.3",
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "multer": "^1.3.0",
-    "request": "^2.81.0",
+    "request": "^2.81.0"
+  },
+  "devDependencies": {
     "typescript": "^2.6.2",
     "@types/body-parser": "^1.16.4",
+    "@tsmean/utils": "^1.1.3",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.36",
     "@types/multer": "^1.3.2",
