restrict memory, return json from api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,11 @@ version: '3.2'
 services:
   mailchimp:
     image: bersling/mailchimp
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 256M
     secrets:
       - mailchimp.json
     networks:
