--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,19 +7,19 @@ services:
         limits:
           cpus: '0.50'
           memory: 256M
+      labels:
+        - "traefik.frontend.rule=Host:mailchimp2.tsmean.com"
+        - "traefik.port=52502"
+        - "traefik.docker.network=traefik"
+    ports:
+      - "52502:52502"
     secrets:
       - mailchimp.json
     networks:
-      - web
-      - default
-    labels:
-      - "traefik.frontend.rule=Host:mailchimp2.tsmean.com"
-      - "traefik.domain=tsmean.com"
-      - "traefik.port=52502"
-      - "traefik.docker.network=web"
+      - traefik
 
 networks:
-  web:
+  traefik:
     external: true
 
 secrets:
